<resources>
    <string name="app_name">ProjectAkhir</string>
    <string name="register">Register</string>
    <string name="name">Enter Name</string>
    <string name="email">Enter Email</string>
    <string name="password">Enter Password</string>
    <string name="mobile_number">Enter Mobile Number</string>
    <string name="sign_up">Sign Up</string>
    <string name="login">Login</string>
    <string name="welcome_to_marketplace">Welcome to Marketplace</string>
    <string name="login_background">login background</string>
    <string name="image">image</string>
    <string name="get_started">GET STARTED</string>
    <string name="change_language_settings">Change Language Settings</string>
    <string name="menu">Menu</string>
    <string name="about">About</string>
    <string name="exit">Exit</string>
    <string name="admin">Admin</string>
    <string name="profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="marketplace">Marketplace</string>
    <string name="versi_beta_1_0">versi beta 1_0</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="back">Back</string>
    <string name="reset_password">RESET PASSWORD</string>
    <string name="pilih">Pilih</string>
    <string name="pendidikan">Pendidikan</string>
    <string name="jenis_kelamin">Jenis Kelamin</string>
    <string name="login_as_guest">login as guest</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="to_reset_password_enter_your_email_press_the_button_and_check_mail_to_follow_instruction">To reset password, enter your email, press the button and check mail to follow instruction.</string>
    <string name="your_email_here">Your email here</string>
    <string name="show_password">Show Password</string>
    <string name="buyer_data">buyer data</string>
    <string name="nama_barang">Nama Barang</string>
    <string name="harga_barang">Harga Barang</string>
    <string name="stok_barang">Stok Barang</string>
    <string name="masukkan_deskripsi_barang">Masukkan Deskripsi Barang</string>
    <string name="masukkan_url_gambar">Masukkan Url Gambar</string>
    <string name="cek_url_foto">Cek Url Foto</string>
    <string name="buat_barang">Buat Barang</string>
    <string name="deskripsi_barang">Deskripsi Barang</string>
    <string name="edit_produk">Edit Produk</string>
    <string name="tas_hitam">Tas Hitam</string>
    <string name="rp_150000">Rp. 150000</string>
    <string name="delete">Delete</string>
    <string name="token">token</string>
    <string name="nanda_adisaputra">Nanda Adisaputra</string>
    <string name="android_developer">Android Developer</string>
    <string name="yes">Yes</string>
    <string name="take_photo">Take Photo</string>
    <string name="create_product">Create Product</string>
    <string name="nomor_hp">Nomor HP</string>
    <string name="_082141730797">082141730797</string>
    <string name="detail">Detail</string>
    <string name="share">Share</string>
    <string name="detail_mahasiswa">Detail Mahasiswa</string>
    <string name="nama">Nama</string>
    <string name="sekolah">Sekolah</string>
    <string name="sma_negeri_10_semar_ang">SMA NEGERI 10 SEMAR ANG</string>
    <string name="tahun_lulus">Tahun Lulus</string>
    <string name="_2014">2014</string>
    <string name="jurusan">Jurusan</string>
    <string name="ipa">IPA</string>
    <string name="universitas">Universitas</string>
    <string name="universitas_semarang">Universitas Semarang</string>
    <string name="jurusan_kuliah">Jurusan Kuliah</string>
    <string name="teknik_informatika">Teknik Informatika</string>
</resources>
