<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group>
        <item android:title="@string/menu">
            <menu>
                <item
                    android:id="@+id/nav_add"
                    android:icon="@drawable/ic_note"
                    android:title="@string/buyer_data"/>
                  <item
                    android:id="@+id/menu_tentang"
                    android:icon="@drawable/ic_info"
                    android:title="@string/about" />
            </menu>
        </item>
        <item android:title="@string/exit">
            <menu>
                <item
                    android:id="@+id/menu_keluar"
                    android:icon="@drawable/ic_exit"
                    android:title="@string/exit" />
            </menu>
        </item>
    </group>
</menu>




