<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/reset_password_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="16dp"
    android:paddingRight="16dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:padding="10dp"
        android:textColor="#FF0057"
        android:text="@string/forgot_your_password"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/to_reset_password_enter_your_email_press_the_button_and_check_mail_to_follow_instruction"
        android:textSize="14sp" />

    <EditText
        android:id="@+id/edt_reset_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:hint="@string/your_email_here"
        android:inputType="textEmailAddress"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/btn_reset_password"
        style="@style/loginButton"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:text="@string/reset_password" />

    <TextView
        android:id="@+id/tv_backreset"
        style="@style/parent"
        android:layout_marginTop="@dimen/loginViewsMargin"
        android:onClick="onClick"
        android:text="@string/forgot_password"
        android:textAlignment="center"
        android:textColor="#FC3C7D"
        android:textStyle="bold" />
</LinearLayout>