<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:elevation="@dimen/_5sdp"
    android:layout_marginTop="@dimen/_16sdp"
    android:layout_marginBottom="@dimen/_16sdp"
    android:background="@color/whiteCardColor"
    app:cardCornerRadius="@dimen/_16sdp"
    tools:targetApi="lollipop">

    <LinearLayout
        style="@style/linearParent"
        android:layout_gravity="center"
        android:padding="@dimen/_16sdp">
        <ImageView
            android:layout_width="@dimen/_150sdp"
            android:layout_height="@dimen/_150sdp"
            android:src="@drawable/userimage"
            android:contentDescription="@string/image"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_name"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/ic_account"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_phone"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/ic_phone"
                android:hint="@string/mobile_number"
                android:inputType="number"
                android:maxLines="1"
                tools:ignore="Autofill,TextFields" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_email"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_chooseGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:text="@string/pilih"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edt_gender"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@id/tv_chooseGender"
                android:enabled="false"
                android:textSize="@dimen/_14ssp"
                android:drawableStart="@drawable/ic_people"
                android:hint="@string/jenis_kelamin"
                tools:ignore="Autofill,TextFields" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp">

            <TextView
                android:id="@+id/tv_selectEducation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginEnd="0dp"
                android:text="@string/pilih"
                android:textColor="@color/colorAccent" />

            <EditText
                android:id="@+id/edt_education"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_10sdp"
                android:layout_toStartOf="@+id/tv_selectEducation"
                android:enabled="false"
                android:textSize="@dimen/_14ssp"
                android:drawableStart="@drawable/ic_school"
                android:hint="@string/pendidikan"
                tools:ignore="Autofill,TextFields" />
        </RelativeLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/parent"
            android:layout_marginTop="@dimen/_8sdp">

            <EditText
                android:id="@+id/edt_password"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register"
            style="@style/loginButton"
            android:onClick="onClick"
            android:layout_gravity="center"
            android:text="@string/register" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_loginRegister"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/login"
            android:onClick="onClick"
            android:layout_weight="2"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />
        <TextView
            android:id="@+id/tv_guestRegister"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_marginTop="@dimen/_16sdp"
            android:text="@string/login_as_guest"
            android:onClick="onClick"
            android:textAlignment="center"
            android:textColor="@color/primaryTextColor"
            android:textStyle="bold" />
    </LinearLayout>

    </LinearLayout>
</ScrollView>
