<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/loginCard"
    android:layout_gravity="center"
    android:layout_marginTop="@dimen/loginViewsMargin"
    android:layout_marginBottom="@dimen/loginViewsMargin"
    android:background="@color/whiteCardColor"
    android:elevation="5dp"
    app:cardCornerRadius="@dimen/loginCardRadius"
    tools:context=".ui.activity.login.LoginActivity"
    tools:targetApi="lollipop">

    <LinearLayout
        style="@style/linearParent"
        android:id="@+id/anim"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/userimage"
            android:contentDescription="@string/image"
            android:layout_gravity="center"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputEmail"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/edt_login"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/ic_email"
                android:hint="@string/email"
                android:textSize="@dimen/_18ssp"
                android:inputType="textEmailAddress"
                android:maxLines="1"
                tools:ignore="Autofill" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputPassword"
            style="@style/parent"
            android:layout_marginTop="@dimen/loginViewsMargin">

            <EditText
                android:id="@+id/edt_loginPassword"
                style="@style/modifiedEditText"
                android:drawableStart="@drawable/ic_lock"
                android:hint="@string/password"
                android:textSize="18sp"
                android:inputType="textPassword"
                android:maxLines="1"
                tools:ignore="Autofill" />

            <CheckBox
                android:id="@+id/showPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_password" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_login"
            style="@style/loginButton"
            android:onClick="onClick"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"
            android:text="@string/login" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/forgot_password"
                style="@style/parent"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="onClick"
                android:text="@string/forgot_password"
                android:textAlignment="center"
                android:textColor="#FC3C7D"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/tv_register"
                style="@style/parent"
                android:layout_marginStart="16dp"
                android:layout_marginTop="@dimen/loginViewsMargin"
                android:onClick="onClick"
                android:text="@string/sign_up"
                android:textAlignment="center"
                android:textColor="#FC3C7D"
                android:textStyle="bold" />
        </LinearLayout>
        <com.google.android.gms.common.SignInButton
            android:id="@+id/google_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="8dp"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>