<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".fragment.AboutFragment">

    <ImageView
        android:id="@+id/image"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="90dp"
        android:contentDescription="@string/image"
        android:src="@drawable/placeholder_user" />

    <TextView
        android:id="@+id/teks1"
        style="@style/style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/image"
        android:layout_marginTop="20dp"
        android:text="@string/marketplace"
        android:textAlignment="center"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/teks1"
        android:layout_marginTop="20dp"
        android:text="@string/versi_beta_1_0"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="italic" />
</RelativeLayout>