<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/_10sdp"
    app:cardCornerRadius="@dimen/_10sdp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_10sdp">

        <ImageView
            android:id="@+id/iv_product"
            android:contentDescription="@string/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_150sdp" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoes"
            android:textSize="@dimen/_20ssp" />

        <TextView
            android:id="@+id/tv_prices"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rp_150000"
            android:textSize="@dimen/_18ssp" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/btn_delete"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:textSize="@dimen/_20ssp"
            android:text="@string/delete"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>