<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical"
    tools:context=".ui.fragment.ProfileFragment">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="16dp"
        android:background="@color/indigo">

        <ImageView
            android:id="@+id/image"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="16dp"
            android:contentDescription="@string/image"
            android:scaleType="fitXY"
            android:src="@drawable/gambar" />

        <LinearLayout
            android:id="@+id/text1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Nama"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/nanda_adisaputra"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/text2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text1"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal"
            android:padding="1dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nomor_hp"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                android:text="@string/_082141730797"
                android:textColor="@android:color/white"
                android:textSize="12sp"
                tools:ignore="Autofill,LabelFor,TextFields" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text2"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="2dp">

            <Button
                android:id="@+id/detail"
                style="?android:buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:background="@drawable/login_button"
                android:text="@string/detail"
                android:textColor="@android:color/white"
                android:textSize="12sp" />

            <Button
                android:id="@+id/share"
                style="?android:buttonBarButtonStyle"
                android:layout_width="180dp"
                android:layout_height="50dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/login_button"
                android:text="@string/share"
                android:textColor="@android:color/white"
                android:textSize="12sp" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>